QVarLengthArray: Extract Method growBy()

Separates the actual reallocation use-cases from the resizing ones
when calling reallocate_impl, in preparation for fixing QTBUG-109745.

Task-number: QTBUG-109745
Change-Id: Iee0c3e56569ec7877beda8db3a645e2bbb6b4d4a
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>
(cherry picked from commit 26b227e128475da3f88a6b34921a08994bf71cf4)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>